# ia-proyecto-v0.5-noviembre2025

./: .env.example  .gitignore  README.md  cloudbuild.yaml  codigos_ia_engine.txt  docker-compose.yml  masterkey.py
backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  readme.MD  test-gcp.ts  tsconfig.json
backend/.secrets/: service-account.example.json
backend/src/: server.ts
backend/src/lib/: ia-engine.client.ts  ia-engine.meta.client.ts  ia-engine.schema.ts
backend/src/routes/: emailV2Meta.ts  generateEmailV2.ts  generated.ts  history.ts  metaEmailV2.ts  sfmc.ts
backend/src/services/: emailTemplate.ts  gcpStorage.ts  iaEngine.ts  image.ts  openai.ts  promptKit.ts  sfmc.service.ts  textGen.ts
backend/src/utils/: constants.ts  validate.ts
backend/test/: iaEngine.test.ts  iaEngine.ts
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/docs/: App.md
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Email2Sidebar.tsx  Email2Workspace.tsx  EmailPreview.tsx  Field.tsx  HeaderPreviewBar.tsx  InLineProgress.tsx  LoadingStepper.tsx  NumberStepper.tsx  (+1 more)
ia-engine/: .dockerignore  .env.example  Dockerfile  pyproject.toml  readme.MD  requirements.txt
ia-engine/app/: main.py
ia-engine/app/models/: request.py  response.py
ia-engine/app/routers/: generate.py  meta.py
ia-engine/app/services/: openai_client.py  text_engine.py
ia-engine/app/utils/: campaigns.py  clusters.py  copy_meta.py  meta.py  prompts.py  validators.py
(+16 files in other folders)
